@startuml
hide methods
left to right direction
'skinparam linetype ortho

Title "Domain Model"

skinparam class {
    LifeLineBorderColor DarkBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFFF
    ArrowColor grey
    BorderColor black
}

skinparam packageStyle rectangle

skinparam card {
    LifeLineBorderColor Green
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFDD
    ArrowColor DarkGrey
    BorderColor Black
}

package "Application Aggregate"{
entity Application <<entity>><<root>>

    card ApplicationFiles <<Value Object>>{
    }
    card Status <<Value Object>>{
    }
    card SubmissionDate <<Value Object>>{
    }
    card Rank <<Value Object>>{
    }

    Application --> ApplicationFiles
    Application --> Status
    Application --> SubmissionDate
    Application --> Rank

    note right of Status
        Can be one of the following:
        - submitted
        - pending
        - accepted
        - declined
    end note

    note right of ApplicationFiles
        Can be one of the following:
        - text file with the contents of the email
        - file for each file attached to the email
        - text file with the contents of each file attached to the email
        - text file with the data of the application and candidate
    end note

}

package "Candidate Aggregate"{
entity Candidate <<entity>><<root>>

    card Curriculum <<Value Object>> {
    }
    card TelephoneNumber <<Value Object>>{
    }

    Candidate --> Curriculum
    Candidate --> TelephoneNumber
}

package "User Aggregate"{
entity User <<entity>><<root>>

    card UserEmail <<Value Object>> {
    }
    card UserName <<Value Object>> {
    }
    card UserPassword <<Value Object>> {
    }
    card Username<<Value Object>> {
    }

    User --> UserEmail
    User --> UserName
    User --> Username
    User --> UserPassword

}

Candidate --> User

Application "N" ---> "1" Candidate

@enduml